deploy/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-frontend-ingress
  namespace: default
spec:
  rules:
    - host: frontend.k8s.tester.com.tw
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-frontend-service
                port:
                  number: 8080
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-backend-ingress
  namespace: default
spec:
  rules:
    - host: backend.k8s.tester.com.tw
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-backend-service
                port:
                  number: 8081
  ingressClassName: nginx
